Enhanced project documentation and added comprehensive README instructions
- Added comprehensive PROJECT_DOCUMENTATION.md with complete project overview
- Enhanced README.md with detailed setup and running instructions
- Added system requirements and troubleshooting guide
- Included multiple methods for running the application
- Added Motorcycle model class with inheritance from Vehicle
- Created MotorcycleDemo for demonstration purposes
- Added MotorcycleTest for unit testing
- Updated MainViewController and MainView.fxml
- Improved project structure documentation
- Added current features and project status information